--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,33 +1,37 @@
 <idea-plugin>
-  <id>de.cusp.cu.curNotes</id>
-  <name>CurNotes</name>
-  <version>0.9</version>
-  <vendor email="dev@cusp.de" url="https://www.cusp.de">cusp - computer-und-sound</vendor>
+    <id>de.cusp.cu.curNotes</id>
+    <name>CurNotes</name>
+    <version>1.0.0</version>
+    <vendor email="dev@cusp.de" url="https://www.cusp.de">Jörg Wrase - computer-und-sound</vendor>
 
-  <description><![CDATA[
-You can save notes
+    <description><![CDATA[
+<h3>Save Notes that belong to the project</h3>
+<p>You can save notes that belong to the project. They will be saved in the .idea-folder.</p>
+<p>So if you don't track your .idea-folder with git, the notes are also not tracked.</p>
+<p>So you can call it &quot;private notes&quot;.</p>
+
     ]]></description>
 
-  <change-notes><![CDATA[
+    <change-notes><![CDATA[
 
     ]]>
-  </change-notes>
+    </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="145.0"/>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
+    <idea-version since-build="145.0"/>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <depends>com.intellij.modules.lang</depends>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
+         on how to target different products -->
+    <depends>com.intellij.modules.lang</depends>
 
-  <extensions defaultExtensionNs="com.intellij">
-  </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+    </extensions>
 
-  <actions>
-    <!-- Add your actions here -->
-    <action id="curnotesstart" class="CurNotesStart" text="CurNotesStart" description="CurNotes Start">
-      <add-to-group group-id="ToolsMenu" anchor="last"/>
-    </action>
-  </actions>
+    <actions>
+        <!-- Add your actions here -->
+        <action id="curnotesstart" class="CurNotesStart" text="CurNotesStart" description="CurNotes Start">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+    </actions>
 
 </idea-plugin>
